[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://game/ui/UnitInfoPanel.gd" id="1"]
[ext_resource type="Theme" uid="uid://b8ej4xqxqxqxq" path="res://game/ui/TacticalCombatTheme.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UnitInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -340.0
offset_right = 300.0
offset_bottom = -20.0
custom_minimum_size = Vector2(280, 320)
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Unit Information"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PortraitContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UnitPortrait" type="ColorRect" parent="MarginContainer/VBoxContainer/PortraitContainer"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
color = Color(0.5, 0.5, 0.5, 1)

[node name="BasicInfoContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PortraitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="UnitNameLabel" type="Label" parent="MarginContainer/VBoxContainer/BasicInfoContainer"]
layout_mode = 2
text = "Unit Name"
theme_override_font_sizes/font_size = 14
autowrap_mode = 2

[node name="UnitTypeLabel" type="Label" parent="MarginContainer/VBoxContainer/BasicInfoContainer"]
layout_mode = 2
text = "Unit Type"
theme_override_font_sizes/font_size = 12
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Statistics"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Health: 100/100"
theme_override_font_sizes/font_size = 12

[node name="AttackLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Attack: 25"
theme_override_font_sizes/font_size = 12

[node name="DefenseLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Defense: 15"
theme_override_font_sizes/font_size = 12

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Speed: 8"
theme_override_font_sizes/font_size = 12

[node name="MovementLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Movement: 3"
theme_override_font_sizes/font_size = 12

[node name="RangeLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Range: 1"
theme_override_font_sizes/font_size = 12

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InstructionsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Arrow Keys: Move Cursor
Enter: Select Unit
Escape: Deselect"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 10
modulate = Color(0.7, 0.7, 0.7, 1)
autowrap_mode = 2